add first ci-job to run tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,3 +3,27 @@ env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   AWS_DEFAULT_REGION: ${{secrets.AWS_DEFAULT_REGION}}
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - 'Dockerfile'
+      - '.github/workflows/**'
+      - '.deploy/**'
+      - 'src/**'
+  pull_request:
+    branches:
+      - master
+jobs:
+  test:
+    name: Run api tests with Mocha
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16
+        uses: actions/setup-node@vs
+        with:
+          node-version: '16'
+      - run: npm ci
+      - run: npm test
