--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,14 @@ jobs:
           node-version: '16'
       - run: npm ci
       - run: npm test
+  build-and-push-docker-image:
+    name: Build and push a docker image
+    runs-on: ubuntu-latest
+    needs: test
+    environment: nomad-stage
+    if: github.ref == 'refs/head/master'
+    steps:
+      - uses: actions/checkout@v2
+      - run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
+      - run: docker build -t thf999/demo .
+      - run: docker push thf999/demo
