--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     environment: nomad-stage
-    if: github.ref == 'refs/head/master'
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
-      - run: docker login --username ${{secrets.DOCKER_USERNAME}} --password ${{secrets.DOCKER_PASSWORD}}
+      - run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t thf999/demo .
       - run: docker push thf999/demo
