--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,19 @@ jobs:
       - run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t thf999/demo .
       - run: docker push thf999/demo
+  build-ami:
+    name: Build AMI image
+    env:
+      PKR_VAR_docker_username: ${{ secrets.DOCKER_USERNAME }}
+      PKR_VAR_docker_password: ${{ secrets.DOCKER_PASSWORD }}
+    environment: nomad-stage
+    runs-on: ubuntu-latest
+    needs: build-and-push-docker-image
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      - run: bash .deploy/scripts/packer-install.sh
+      - run: cd ./deploy/packer && packer validate image.pkr.hcl
+      - name: build ami image
+        run: cd ./deploy/packer && packer build image.pkr.hcl
+        
